--- a/.github/workflows/_rust_lints.yml
+++ b/.github/workflows/_rust_lints.yml
@@ -4,6 +4,7 @@ on: workflow_call
 
 jobs:
   rustfmt:
+    if: always()
     runs-on: [self-hosted]
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
@@ -13,6 +14,7 @@ jobs:
         run: cargo +nightly ci-fmt
 
   cargo-deny:
+    if: always()
     name: cargo-deny (advisories, licenses, bans, ...)
     runs-on: [self-hosted]
     steps:
@@ -20,6 +22,7 @@ jobs:
       - uses: EmbarkStudios/cargo-deny-action@v1
 
   clippy:
+    if: always()
     needs:
       - rustfmt
       - cargo-deny
