--- a/crates/iota-config/data/fullnode-template-with-path.yaml
+++ b/crates/iota-config/data/fullnode-template-with-path.yaml
@@ -1,5 +1,5 @@
-# Update this value to the location you want Sui to store its database
-db-path: "suidb"
+# Update this value to the location you want Iota to store its database
+db-path: "iotadb"
 
 # For ipv4, update this to "/ipv4/X.X.X.X/tcp/8080/http"
 network-address: "/dns/localhost/tcp/8080/http"
@@ -22,9 +22,9 @@ authority-store-pruning-config:
 
 protocol-key-pair:
   path: "protocol.key"
-network-key-pair: 
+network-key-pair:
   path: "network.key"
-account-key-pair: 
+account-key-pair:
   path: "account.key"
-worker-key-pair: 
+worker-key-pair:
   path: "worker.key"
