--- a/crates/iota-transactional-test-runner/Cargo.toml
+++ b/crates/iota-transactional-test-runner/Cargo.toml
@@ -1,27 +1,30 @@
 [package]
-name = "sui-transactional-test-runner"
+name = "iota-transactional-test-runner"
 version = "0.1.0"
+authors = ["IOTA Foundation <contact@iota.org>"]
 edition = "2021"
-authors = ["Mysten Labs <eng@mystenlabs.com>"]
-description = "Move framework for Sui platform"
 license = "Apache-2.0"
 publish = false
+description = "Move framework for Iota platform"
+
+[lints]
+workspace = true
 
 [dependencies]
 anyhow.workspace = true
+async-trait.workspace = true
 bcs.workspace = true
 bimap.workspace = true
 clap.workspace = true
+criterion.workspace = true
 eyre.workspace = true
+futures.workspace = true
 once_cell.workspace = true
 rand.workspace = true
 regex.workspace = true
-tempfile.workspace = true
-async-trait.workspace = true
-tokio.workspace = true
 serde_json.workspace = true
-futures.workspace = true
-criterion.workspace = true
+tempfile.workspace = true
+tokio.workspace = true
 
 fastcrypto.workspace = true
 move-binary-format.workspace = true
@@ -36,23 +39,21 @@ telemetry-subscribers.workspace = true
 move-stdlib = { path = "../../external-crates/move/crates/move-stdlib" }
 move-vm-runtime = { path = "../../external-crates/move/crates/move-vm-runtime" }
 
-rocksdb.workspace = true
+iota-config.workspace = true
+iota-core = { workspace = true, features = ["test-utils"] }
+iota-framework.workspace = true
+iota-framework-snapshot.workspace = true
+iota-graphql-rpc.workspace = true
+iota-json-rpc.workspace = true
+iota-json-rpc-api.workspace = true
+iota-json-rpc-types.workspace = true
+iota-protocol-config.workspace = true
+iota-rest-api.workspace = true
+iota-storage.workspace = true
+iota-swarm-config.workspace = true
+iota-types = { workspace = true, features = ["test-utils"] }
 simulacrum.workspace = true
-sui-graphql-rpc.workspace = true
-sui-rest-api.workspace = true
-sui-swarm-config.workspace = true
-sui-config.workspace = true
-sui-core = { workspace = true, features = ["test-utils"] }
-sui-framework.workspace = true
-sui-protocol-config.workspace = true
-sui-types = { workspace = true, features = ["test-utils"]}
-sui-json-rpc-types.workspace = true
-sui-json-rpc.workspace = true
-sui-json-rpc-api.workspace = true
-sui-framework-snapshot.workspace = true
-sui-storage.workspace = true
 typed-store.workspace = true
-typed-store-derive.workspace = true
 
 [target.'cfg(msim)'.dependencies]
 msim.workspace = true
