--- a/crates/iota-data-ingestion/Cargo.toml
+++ b/crates/iota-data-ingestion/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "sui-data-ingestion"
-authors = ["Mysten Labs <build@mystenlabs.com>"]
+name = "iota-data-ingestion"
+version.workspace = true
+authors = ["IOTA Foundation <contact@iota.org>"]
+edition = "2021"
 license = "Apache-2.0"
 publish = false
-edition = "2021"
-version = "0.1.0"
 
 [dependencies]
 anyhow.workspace = true
@@ -18,23 +18,23 @@ bcs.workspace = true
 byteorder.workspace = true
 bytes.workspace = true
 futures.workspace = true
-mysten-metrics.workspace = true
+iota-archival.workspace = true
+iota-data-ingestion-core.workspace = true
+iota-metrics.workspace = true
+iota-storage.workspace = true
+iota-types.workspace = true
 notify.workspace = true
 object_store.workspace = true
+prometheus.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 serde_yaml.workspace = true
-prometheus.workspace = true
 telemetry-subscribers.workspace = true
 tokio = { workspace = true, features = ["full"] }
 tracing.workspace = true
-sui-archival.workspace = true
-sui-storage.workspace = true
-sui-data-ingestion-core.workspace = true
-sui-types.workspace = true
 url.workspace = true
 
 [dev-dependencies]
+iota-types = { workspace = true, features = ["test-utils"] }
 rand.workspace = true
 tempfile.workspace = true
-sui-types = { workspace = true, features = ["test-utils"] }
