--- a/.github/actions/diffs/action.yml
+++ b/.github/actions/diffs/action.yml
@@ -38,6 +38,7 @@ runs:
             - ".github/workflows/_external_rust_tests.yml"
             - ".github/workflows/_external_rust_lints.yml"
             - ".github/workflows/_mysticeti_tests.yml"
+            - ".github/workflows/_cargo_deny.yml"
             - "Cargo.toml"
             - "Cargo.lock"
             - ".config/nextest.toml"
