--- a/external-crates/move/crates/move-stdlib/Cargo.toml
+++ b/external-crates/move/crates/move-stdlib/Cargo.toml
@@ -9,6 +9,7 @@ publish = false
 repository = "https://github.com/diem/diem"
 description = "Diem stdlib"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 anyhow.workspace = true
 hex.workspace = true
