--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
 			"yaml@<2.2.2": ">=2.2.2",
 			"semver@<7.5.2": ">=7.5.2",
 			"postcss@<8.4.31": ">=8.4.31",
-			"braces": ">=3.0.3"
+			"braces": ">=3.0.3",
+			"path-to-regexp": ">=8.1.0"
 		}
 	},
 	"engines": {
