--- a/Cargo.toml
+++ b/Cargo.toml
@@ -128,6 +128,7 @@ members = [
   "crates/iota-swarm-config",
   "crates/iota-test-transaction-builder",
   "crates/iota-test-validator",
+  "crates/iota-tls",
   "crates/iota-tool",
   "crates/iota-transaction-builder",
   "crates/iota-transaction-checks",
@@ -416,6 +417,7 @@ iota-swarm = { path = "crates/iota-swarm" }
 iota-swarm-config = { path = "crates/iota-swarm-config" }
 iota-test-transaction-builder = { path = "crates/iota-test-transaction-builder" }
 iota-test-validator = { path = "crates/iota-test-validator" }
+iota-tls = { path = "crates/iota-tls" }
 iota-tool = { path = "crates/iota-tool" }
 iota-transaction-builder = { path = "crates/iota-transaction-builder" }
 iota-transaction-checks = { path = "crates/iota-transaction-checks" }
