--- a/.github/workflows/hierarchy.yml
+++ b/.github/workflows/hierarchy.yml
@@ -65,7 +65,7 @@ jobs:
   docusaurus:
     needs: diff
     if: |
-      !cancelled() && needs.diff.outputs.isDoc == 'true' && github.event.pull_request.draft == false
+      !cancelled() && needs.diff.outputs.isDoc == 'true' && !github.event.pull_request.draft
     uses: ./.github/workflows/_docusaurus.yml
 
   docs-lint:
@@ -116,10 +116,10 @@ jobs:
       - typos
     if: |
       !cancelled() &&
-      success('dprint-format', 'license-check', 'typos') &&
+      (success('dprint-format', 'license-check', 'typos') || (success('dprint-format', 'typos') && needs.license-check.result == 'skipped')) &&
       needs.diff.outputs.isRust == 'false' &&
       needs.diff.outputs.isMove == 'true' &&
-      github.event.pull_request.draft == false
+      !github.event.pull_request.draft
     uses: ./.github/workflows/_move_tests.yml
 
   rust:
@@ -129,14 +129,17 @@ jobs:
       - license-check
       - typos
     if: |
-      !cancelled() && success('dprint-format', 'license-check', 'typos')
+      !cancelled() &&
+      (success('dprint-format', 'license-check', 'typos') || (success('dprint-format', 'typos') && needs.license-check.result == 'skipped'))
     uses: ./.github/workflows/_rust.yml
     with:
       isRust: ${{ needs.diff.outputs.isRust == 'true' }}
     secrets: inherit
 
   e2e:
-    if: github.event.pull_request.draft == false
+    if: |
+      !github.event.pull_request.draft &&
+      (success('dprint-format', 'license-check', 'typos') || (success('dprint-format', 'typos') && needs.license-check.result == 'skipped'))
     needs:
       - diff
       - dprint-format
