--- a/crates/iota-types/Cargo.toml
+++ b/crates/iota-types/Cargo.toml
@@ -22,6 +22,7 @@ derivative.workspace = true
 iota-stardust-sdk = { version = "1.1", default-features = false, features = ["irc_27", "irc_30", "std"], package = "iota-sdk" }
 enum_dispatch.workspace = true
 eyre.workspace = true
+hex.workspace = true
 im.workspace = true
 indexmap.workspace = true
 itertools.workspace = true
@@ -37,9 +38,11 @@ move-vm-test-utils.workspace = true
 move-vm-types.workspace = true
 nonempty.workspace = true
 num-bigint = { version = "0.4", default-features = false, features = ["rand"] }
+num-rational = "0.4"
 num-traits = "0.2.18"
 num_enum.workspace = true
 once_cell.workspace = true
+packable = { version = "0.8", default-features = false, features = ["io"] }
 prometheus.workspace = true
 rand.workspace = true
 roaring.workspace = true
