--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
 			"semver@<7.5.2": ">=7.5.2",
 			"postcss@<8.4.31": ">=8.4.31",
 			"braces": ">=3.0.3",
-			"path-to-regexp": ">=8.1.0"
+			"path-to-regexp": ">=8.1.0",
+			"body-parser": ">=1.20.3",
+			"dset": "3.1.4"
 		}
 	},
 	"engines": {
