--- a/crates/iota-transactional-test-runner/Cargo.toml
+++ b/crates/iota-transactional-test-runner/Cargo.toml
@@ -24,6 +24,7 @@ futures.workspace = true
 once_cell.workspace = true
 rand.workspace = true
 regex.workspace = true
+rocksdb.workspace = true
 serde_json.workspace = true
 simulacrum.workspace = true
 telemetry-subscribers.workspace = true
