--- a/.github/workflows/apps-wallet-rc.build.yml
+++ b/.github/workflows/apps-wallet-rc.build.yml
@@ -42,9 +42,9 @@ jobs:
           export artifact_name="iota-wallet-${{ steps.package-version.outputs.current-version }}-rc.${{ env.RC_VERSION }}"
           echo "artifact_name=${artifact_name}" >> $GITHUB_ENV
       - name: Build Wallet
-        run: pnpm wallet build:rc
+        run: WALLET_RC_VERSION=2 pnpm wallet build:rc
         env: 
-         WALLET_RC_VERSION: ${{ env.WALLET_RC_VERSION }}
+         WALLET_RC_VERSION: 2
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
