--- a/.github/workflows/apps-wallet-rc.build.yml
+++ b/.github/workflows/apps-wallet-rc.build.yml
@@ -36,6 +36,10 @@ jobs:
         uses: martinbeentjes/npm-get-version-action@v1.3.1
         with:
           path: apps/wallet
+      - name: Test envs with node
+        run: pnpm test-1
+      - name: Test envs with cross-env
+        run: pnpm test-2
       - name: Create artifact name
         shell: bash
         run: |
