--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -23,7 +23,9 @@
         "pack:zip": "web-ext build --source-dir ./dist --overwrite-dest",
         "ampli": "ampli",
         "pull-amplitude": "ampli pull web && node prependLicense.mjs && prettier -w ampli.json src/shared/analytics/ampli/index.ts",
-        "demoApp:dev": "pnpm vite -c ./tests/demo-app/vite.config.ts ./tests/demo-app/ --port 5181"
+        "demoApp:dev": "pnpm vite -c ./tests/demo-app/vite.config.ts ./tests/demo-app/ --port 5181",
+        "test-1": "node ./test.ts",
+        "test-2": "cross-env ./test.ts"
     },
     "repository": {
         "type": "git",
