--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -8,7 +8,7 @@
         "build": "pnpm build:prod",
         "build:prod": "cross-env NODE_ENV=\"production\" TS_NODE_PROJECT=\"./configs/ts/tsconfig.webpack.json\" webpack --progress",
         "build:dev": "cross-env NODE_ENV=\"development\" TS_NODE_PROJECT=\"./configs/ts/tsconfig.webpack.json\" webpack --progress",
-        "build:rc": "cross-env WALLET_RC=true NODE_ENV=\"production\" TS_NODE_PROJECT=\"./configs/ts/tsconfig.webpack.json\" WALLET_RC_VERSION=\"$WALLET_RC_VERSION\" webpack --progress",
+        "build:rc": "cross-env WALLET_RC=true NODE_ENV=\"production\" TS_NODE_PROJECT=\"./configs/ts/tsconfig.webpack.json\" webpack --env RC_VERSION=RC_VERSION --progress",
         "prettier:check": "prettier -c --ignore-unknown --ignore-path=../../.prettierignore --ignore-path=.prettierignore .",
         "prettier:fix": "prettier -w --ignore-unknown --ignore-path=../../.prettierignore --ignore-path=.prettierignore .",
         "prettier:fix:watch": "onchange '**' -i -f add -f change -j 5 -- prettier -w --ignore-unknown --ignore-path=../../.prettierignore --ignore-path=.prettierignore {{file}}",
@@ -25,7 +25,7 @@
         "pull-amplitude": "ampli pull web && node prependLicense.mjs && prettier -w ampli.json src/shared/analytics/ampli/index.ts",
         "demoApp:dev": "pnpm vite -c ./tests/demo-app/vite.config.ts ./tests/demo-app/ --port 5181",
         "test-1": "node ./test.js",
-        "test-2": "cross-env WALLET_RC_VERSION=$WALLET_RC_VERSION node ./test.js"
+        "test-2": "cross-env RC_VERSION=$RC_VERSION node ./test.js"
     },
     "repository": {
         "type": "git",
