--- a/.github/workflows/apps-wallet-rc.build.yml
+++ b/.github/workflows/apps-wallet-rc.build.yml
@@ -12,7 +12,7 @@ env:
   DEFAULT_NETWORK: ${{ secrets.WALLET_RC_DEFAULT_NETWORK }}
   IOTA_NETWORKS: ${{ secrets.WALLET_RC_IOTA_NETWORKS }}
   APPS_BACKEND: ${{ secrets.WALLET_RC_APPS_BACKEND }}
-  RC_VERSION: ${{ github.event.inputs.rc_version }}
+  WALLET_RC_VERSION: ${{ github.event.inputs.rc_version }}
   WALLET_RC: "true"
 
 jobs:
@@ -43,13 +43,13 @@ jobs:
       - name: Create artifact name
         shell: bash
         run: |
-          export artifact_name="iota-wallet-${{ steps.package-version.outputs.current-version }}-rc.${{ env.RC_VERSION }}"
+          export artifact_name="iota-wallet-${{ steps.package-version.outputs.current-version }}-rc.${{ env.WALLET_RC_VERSION }}"
           echo "artifact_name=${artifact_name}" >> $GITHUB_ENV
-          echo "RC_VERSION=${{ env.RC_VERSION }}" >> $GITHUB_ENV
+          echo "WALLET_RC_VERSION=${{ env.WALLET_RC_VERSION }}" >> $GITHUB_ENV
       - name: Build Wallet
-        run: RC_VERSION=${{ env.RC_VERSION }} pnpm wallet build:rc
+        run: WALLET_RC_VERSION=${{ env.WALLET_RC_VERSION }} pnpm wallet build:rc
         env: 
-         RC_VERSION: ${{ env.RC_VERSION }}
+         WALLET_RC_VERSION: ${{ env.WALLET_RC_VERSION }}
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
